jge-core/tests/ui/scene_two_roots_fail.stderr
error: scene! 顶层只允许：可选的 `progress tx;` + 一个根 node
 --> tests/ui/scene_two_roots_fail.rs:6:9
  |
6 |         node "b" { }
  |         ^^^^
