jge-core/tests/ui/scene_two_roots_fail.rs
use jge_core::scene;

fn main() {
    let _ = scene! {
        node "a" { }
        node "b" { }
    };
}
